# cpm

./: .gitignore  CMakeLists.txt  compile_flags.txt  issues.md  readme.md  snips.md
core-plugin-manager/: CMakeLists.txt  main.c
core-plugin-manager/adapter/: adapter.c  storage.c  storage.h
core-plugin-manager/adapter/driver/: driver.c
core-plugin-manager/core/: manager.c  manager.h  manager_internal.c  manager_internal.h  storage.c  storage.h
core-plugin-manager/persist/: persist.c
core-plugin-manager/utils/: json.c
doc/: Easeview数据传输协议.md  issues.md
include/: esvcpm-232
include/core-plugin-manager/: adapter.h  define.h  device.h  driver.h  plugin.h
include/core-plugin-manager/persist/: persist.h
include/core-plugin-manager/utils/: log.h
include/esvcpm/: adapter.h  define.h  device.h  driver.h  plugin.h
include/esvcpm/persist/: persist.h
include/esvcpm/utils/: log.h  mqtt.h  time.h
persistence/: 0000_2.2.0_plugin-initial.sql  0000_2.2.0_thing-initial.sql  sqlite.db  thing.db
persistence/backup/persistence/: sqlite.db
persistence/dev/: sqlite-dev.db  sqlite.db
persistence/iot/db/: easeview_thing.db
persistence/lnx900m/: thing.db
persistence/release/: thing_device.sql  thing_plugin.sql
plugins/lnx-dmx/: CMakeLists.txt  lnx-dmx_plugin.c  lnx-dmx_plugin.h
plugins/lnx-dmx/src/: compile_flags.txt  lnx-dmx_plugin.c
plugins/lnx900m-dmx/: CMakeLists.txt
plugins/lnx900m-dmx/src/: lnx900m-dmx.c
plugins/restful/: handle.c  normal_handle.c  rest.c  user.c  user.h  version_handle.c
src/: CMakeLists.txt  argparse.c  main.c
src/adapter/: adapter.c  adapter_internal.h  storage.c  storage.h
src/adapter/driver/: device.c  device_internal.h  driver.c  driver_internal.h
src/cache/: config_data_cache.c  config_data_cache.h
src/config/: easeview_config.c  easeview_config.h  easeview_user_config.c  easeview_user_config.h
src/connection/mqtt/: lan_mqtt5_service.c  lan_mqtt5_service.h  lan_mqtt5_service_internal.h  lan_mqtt_service.c  lan_mqtt_service.h  lan_mqtt_service_internal.h
src/core/: json_parse.c  manager.c  manager.h  manager_adapter_msg.c  manager_adapter_msg.h  manager_internal.c  manager_internal.h  manager_thing_model.c  manager_thing_model.h  node_manager.c  outside_service_manager.c  outside_service_manager.h  outside_service_manager_common.h  outside_service_manager_internal.h  parse_frame.c  parse_json.c  plugin_manager.c  rs232_recv.c  storage.c  storage.h
src/core/frame_handle/: \  parser_rs232_frame.c  parser_rs232_frame.h
src/core/mcurs232/: mcurs232_handle.c  mcurs232_handle.h  mcurs232_helper_functions.c  mcurs232_helper_functions.h  serial_port.c  serial_port.h
src/core/mcurs232/config_frame_handle/: config_parser.c  config_parser.h
src/core/mcurs232/frame_handle/: parser_rs232_frame.c  parser_rs232_frame.h
src/core/mcurs232/plugin_frame_handle/: parser_rs232_frame.c  parser_rs232_frame.h
src/core/mqtt/: mqtt_msg_handle.c  mqtt_msg_handle.h
src/core/parser_config_json/: config_parser.c  config_parser.h
src/persist/: persist.c
src/utils/: http.c  mqtt.c  neu_jwt.c
tools/: armv5l
tools/armv5l/: arm-linux-gnueabi-ar  arm-linux-gnueabi-g++  arm-linux-gnueabi-nm  arm-linux-gnueabi-ranlib
tools/armv5l.bak/: arm-linux-gnueabi-gcc  arm-linux-gnueabi-ld  arm-linux-gnueabi-objdump
tools/armv5l.bak/lib/: libc
tools/armv5l/lib/: libc
